--- a/sample_app/app/views/static_pages/help.html.erb
+++ b/sample_app/app/views/static_pages/help.html.erb
@@ -1,2 +1,2 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, "帮助") %>
+<p>Find me in app/views/static_pages/home.html.erb</p>
