finish routes and layouts

--- a/sample_app/app/views/static_pages/about.html.erb
+++ b/sample_app/app/views/static_pages/about.html.erb
@@ -1,2 +1,5 @@
 <% provide(:title, "关于") %>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<h1>关于我们</h1>
+<p>
+  　“热爱生活，传播美好”，在兼顾趣味性的同时，发布的内容以张扬创意、激情、梦想的生活态度为主旨，让大家在娱乐中感受生活的乐趣。
+</p>
