--- a/sample_app/app/views/layouts/application.html.erb
+++ b/sample_app/app/views/layouts/application.html.erb
@@ -11,20 +11,10 @@
   <![endif]-->
 </head>
 <body>
-<header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="container">
-    <%= link_to "首页","#",id:"logo" %>
-    <nav>
-      <ul>
-        <li><%= link_to '首页','#',title:'首页' %></li>
-        <li><%= link_to '帮助','#' %></li>
-        <li><%= link_to '登录','#' %></li>
-      </ul>
-    </nav>
-  </div>
-</header>
+<%= render 'layouts/header'%>
 <div class="container">
   <%= yield %>
+  <%= render 'layouts/footer'%>
 </div>
 </body>
 </html>
