--- a/sample_app/app/views/layouts/application.html.erb
+++ b/sample_app/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= yield(:title) %></title>
+  <title><%= yield(:title) %> | SAMPLE APP</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -16,5 +16,6 @@
   <%= yield %>
   <%= render 'layouts/footer'%>
 </div>
+<%= debug(params) if Rails.env.development? %>
 </body>
 </html>
